--- a/logistics-consumer/src/main/resources/templates/index.html
+++ b/logistics-consumer/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<script src="../jquery.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 <body>
 <h1 align="center">物流承运平台</h1>
 <input type="button" id="vip" value="普通用户"><br>
@@ -12,7 +12,11 @@
 </body>
 <script>
     $("#vip").click(function (){
-       location.href="logistics/Cuserlogin";
+       location.href="logistics/cuserLogin";
+    })
+
+    $("#vip").click(function (){
+        location.href="logistics/suserLogin";
     })
 
 
