--- a/logistics-consumer/src/main/resources/templates/suser/suserShow.html
+++ b/logistics-consumer/src/main/resources/templates/suser/suserShow.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <frameset rows="10%,*">
-    <frame src="/logistics/top">
+    <frame src="/suser/top">
     <frameset cols="20%,*">
-        <frame src="/logistics/left">
-        <frame src="/logistics/center" name="center">
+        <frame src="/suser/left">
+        <frame src="/suser/center" name="center">
     </frameset>
 </frameset>
 </html>
