--- a/logistics-consumer/src/main/resources/templates/index.html
+++ b/logistics-consumer/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
        location.href="logistics/cuserLogin";
     })
 
-    $("#vip").click(function (){
+    $("#svip").click(function (){
         location.href="logistics/suserLogin";
     })
 
