--- a/logistics-consumer/src/main/resources/templates/suser/frame/left.html
+++ b/logistics-consumer/src/main/resources/templates/suser/frame/left.html
@@ -8,6 +8,6 @@
 <body>
 <h2 align="center"><a href="/suser/toOrderShow" target="center">订单管理</a></h2><br>
 <h2 align="center"><a href="/suser/bill" target="center">财务报表</a></h2><br>
-<h2 align="center"><a href="" target="center">运费计算</a></h2><br>
+<h2 align="center"><a href="/suser/calculation" target="center">运费计算</a></h2><br>
 </body>
 </html>
