--- a/logistics-consumer/src/main/resources/templates/suser/frame/top.html
+++ b/logistics-consumer/src/main/resources/templates/suser/frame/top.html
@@ -6,6 +6,6 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
-<h3>物流交易平台</h3><h3 align="right">当前登录用户:<a href="">退出</a></h3>
+<h3>物流交易平台</h3><h3 align="right">当前登录用户:<a th:text="${n}"></a><a href="">退出</a></h3>
 </body>
 </html>
