--- a/logistics-consumer/src/main/resources/templates/index.html
+++ b/logistics-consumer/src/main/resources/templates/index.html
@@ -7,16 +7,16 @@
 <script src="../js/jquery.min.js"></script>
 <body>
 <h1 align="center">物流承运平台</h1>
-<input type="button" id="vip" value="普通用户"><br>
-<input type="button" id="svip" value="物流商家"><br>
+<h2 align="center"><input type="button" id="vip" value="普通用户"></h2>
+<h2 align="center"><input type="button" id="svip" value="物流商家"></h2>
 </body>
 <script>
     $("#vip").click(function (){
-       location.href="logistics/cuserLogin";
+       location.href="/logistics/cuserLogin";
     })
 
     $("#svip").click(function (){
-        location.href="logistics/suserLogin";
+        location.href="/logistics/suserLogin";
     })
 
 
