--- a/logistics-consumer/src/main/resources/templates/suser/frame/top.html
+++ b/logistics-consumer/src/main/resources/templates/suser/frame/top.html
@@ -6,6 +6,21 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
-<h3>物流交易平台</h3><h3 align="right">当前登录用户:<a th:text="${n}"></a><a href="">退出</a></h3>
+<h1 align="center">物流交易平台</h1>
+<h2>当前登录用户:<a th:text="${suser.susername}"></a>&nbsp;&nbsp;&nbsp;<a href="#" th:onclick="toLogin()">注销</a></h2>
 </body>
+<script>
+
+    function toLogin(){
+        $.ajax({
+            url:"/suser/noLogin",
+            type:"post",
+            success:function (data){
+                top.location.href="/logistics/index";
+            },error:function (){
+                alert("注销失败");
+            }
+        })
+    }
+</script>
 </html>
