--- a/logistics-consumer/src/main/resources/templates/suser/toOrderShow.html
+++ b/logistics-consumer/src/main/resources/templates/suser/toOrderShow.html
@@ -28,7 +28,7 @@
     <select name="address2" id="shi">
         <option value="">请选择</option>
     </select><br>
-    <input type="button" value="查找" onclick="serach()"><br>
+    <input type="button" value="查找" onclick="serach(1)"><br>
     <input type="hidden" name="cpage" id="cpage">
 </form>
 <div id="divv"></div>
