--- a/logistics-consumer/src/main/resources/templates/suser/calculation.html
+++ b/logistics-consumer/src/main/resources/templates/suser/calculation.html
@@ -30,6 +30,7 @@
             data:$("#upForm").serialize(),
             success:function (data) {
                 alert("修改成功");
+                location.href="/suser/calculation";
             },error:function () {
                 alert("修改失败");
             }
