--- a/logistics-consumer/src/main/resources/templates/suser/details.html
+++ b/logistics-consumer/src/main/resources/templates/suser/details.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,6 +7,7 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
+<a href="/suser/toOrderShow">返回</a>
 <table border="1">
     <tr>
         <td>订单号</td>
@@ -44,10 +46,13 @@
         <td th:text="${o.goods.goodsweight}+kg">重量</td>
     </tr>
 </table>
-<a th:if="${o.accept.acceptstatus==0}">
+<a th:if="${o.accept.acceptstatus==0 and o.freight.freightstatus==1}">
     <input type="button" value="受理订单" th:onclick="'javascript:yesaccept('+${o.orderid}+')'">
     <input type="button" value="拒绝受理" th:onclick="'javascript:noaccept('+${o.orderid}+')'">
     <span id="sp1"></span>
+</a>
+<a th:if="${o.freight.freightstatus==0}">
+    <input type="button" value="用户还未支付运费" disabled="disabled">
 </a>
 <a th:if="${o.accept.acceptstatus==1}">
      <h3>已受理</h3>
