--- a/logistics-consumer/src/main/resources/templates/boss/bossShow.html
+++ b/logistics-consumer/src/main/resources/templates/boss/bossShow.html
@@ -6,7 +6,9 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
-入驻申请:
+<center>
+    <h2 style="color: blue">入驻申请:</h2>
+
 <table border="1">
   <tr>
       <td>用户名</td>
@@ -37,6 +39,7 @@
             <input type="button" value="拒绝入驻" disabled="disabled"></td>
     </tr>
 </table>
+</center>
 </body>
 <script>
     function sh(id) {
