--- a/logistics-consumer/src/main/resources/templates/cuser/cuserLogin.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/cuserLogin.html
@@ -9,7 +9,7 @@
 </br></br></br></br></br></br></br></br>
 <form id="loginForm">
     <center>
-        <h2>用户登录</h2>
+        <h2 style="color: blue">用户登录</h2>
         <table border="1">
             <tr>
                 <td>
@@ -32,7 +32,7 @@
         </table>
 
 
-        <input type="button" value="登录" onclick="login()" th:width="80" height="50">
+        <input type="button" value="登录" onclick="login()">
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
         <input type="button" value="我要注册" onclick="regiter()">
