--- a/logistics-consumer/src/main/resources/templates/cuser/cuserRegiter.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/cuserRegiter.html
@@ -7,7 +7,8 @@
 <script src="../js/jquery.min.js"></script>
 <body>
 </br></br></br>
-<center><h2>用户注册</h2>
+<center>
+    <h2 style="color: blue">用户注册</h2>
     </br>
     <form id="registerForm">
         <table border="1">
