--- a/logistics-consumer/src/main/resources/templates/cuser/frame/top.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/frame/top.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h3><center>尊敬的会员，您好！</center></h3>
+<h1 style="color: blue"><center>尊敬的会员，您好！</center></h1>
 </body>
 </html>
