--- a/logistics-consumer/src/main/resources/templates/index.html
+++ b/logistics-consumer/src/main/resources/templates/index.html
@@ -6,9 +6,18 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
-<h1 align="center">物流承运平台</h1>
-<h2 align="center"><input type="button" id="vip" value="普通用户"></h2>
-<h2 align="center"><input type="button" id="svip" value="物流商家"></h2>
+</br></br></br></br></br></br></br></br>
+<center>
+<h1 style="color: blue">物流承运平台</h1>
+    <table border="1">
+        <tr>
+            <td><input type="button" id="vip" value="普通用户"></td>
+        </tr>
+        <tr>
+            <td><input type="button" id="svip" value="物流商家"></td>
+        </tr>
+    </table>
+</center>
 </body>
 <script>
     $("#vip").click(function (){
