--- a/logistics-consumer/src/main/resources/templates/boss/reg.html
+++ b/logistics-consumer/src/main/resources/templates/boss/reg.html
@@ -6,14 +6,28 @@
 </head>
 <script src="../js/jquery.min.js"></script>
 <body>
-<h1>欢迎注册</h1><!--103-->
-<form id="regForm"  ><!--103-->
-    用户名：<input type="text" id="bossname" name="bossname"placeholder="请输入用户名"><span id="sp1"></span><br>
-    密码：<input type="password" id="bosspwd" name="bosspwd" placeholder="请输入密码"><span id="sp2"></span> <br><!--103-->
-    确认密码:<input type="password" id="bosspwd1"  name="bosspwd1" placeholder="请确认密码"><span id="sp3"></span> <br><!--103-->
-    <input type="button" id="zhuce" value="注册"><!--103-->
-</form><!--103-->
-<!--103写完去con-->
+</br></br></br></br></br></br></br></br>
+<center>
+    <h2 style="color: blue">欢迎注册</h2>
+<form id="regForm">
+    <table border="1">
+        <tr>
+            <td><font th:size="5">用户名:</font></td>
+            <td><input type="text" id="bossname" name="bossname"placeholder="请输入用户名"><span id="sp1"></span></td>
+        </tr>
+        <tr>
+            <td><font th:size="5">密码:</font></td>
+            <td><input type="password" id="bosspwd" name="bosspwd" placeholder="请输入密码"><span id="sp2"></span></td>
+        </tr>
+        <tr>
+            <td><font th:size="5">确认密码:</font></td>
+            <td><input type="password" id="bosspwd1"  name="bosspwd1" placeholder="请确认密码"><span id="sp3"></span></td>
+        </tr>
+    </table>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="button" id="zhuce" value="注册">
+</form>
+</center>
 </body>
 <script>
     $("#zhuce").click(function () {
@@ -57,6 +71,6 @@
             $("#sp1").html("<font color='red'>用户名不能为空</font>");
         }
     })
-</script><!--103-->
+</script>
 
 </html>
