--- a/logistics-consumer/src/main/resources/templates/cuser/cuserLogin.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/cuserLogin.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/1.jpg">
 </br></br></br></br></br></br></br></br>
 <form id="loginForm">
     <center>
