--- a/logistics-consumer/src/main/resources/templates/cuser/frame/left.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/frame/left.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body background="../jpg/33.jpg">
 <a href="/cuser/send" target="center">我要寄件</a>
 <br>
 <a href="/cuser/queryCuserSend" target="center">我的快递</a>
