--- a/logistics-consumer/src/main/resources/templates/cuser/frame/top.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/frame/top.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body background="../jpg/34.jpg">
 <h1 style="color: blue"><center>尊敬的会员，您好！</center></h1>
 </body>
 </html>
