--- a/logistics-consumer/src/main/resources/templates/cuser/order/addOrderSend.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/order/addOrderSend.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/36.jpg">
 <a href="/cuser/backB">上一页</a>
     <form id="sendForm">
             <h3>寄件人信息</h3>
