--- a/logistics-consumer/src/main/resources/templates/cuser/order/myQueryOrder.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/order/myQueryOrder.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/35.jpg">
 
 <form id="sendForm">
     <table border="1">
