--- a/logistics-consumer/src/main/resources/templates/index.html
+++ b/logistics-consumer/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/112.jpg">
 </br></br></br></br></br></br></br></br>
 <center>
 <h1 style="color: blue">物流承运平台</h1>
