--- a/logistics-consumer/src/main/resources/templates/suser/bill.html
+++ b/logistics-consumer/src/main/resources/templates/suser/bill.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/66.jpg">
 当前账户余额:<a th:text="${balance.balanceprice}+元"></a><br>
 余额提现:<input type="text" name="money" id="billprice"><input type="button" value="提现" th:onclick="'javascript:totixian()'"><br>
 <table border="1">
