--- a/logistics-consumer/src/main/resources/templates/suser/calculation.html
+++ b/logistics-consumer/src/main/resources/templates/suser/calculation.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/44.jpg">
 <form id="upForm">
     <input type="hidden" name="suserid" th:value="${f.suserid}">
     运费计算：<br><input type="text" name="one1" th:value="${f.one1}">-
