--- a/logistics-consumer/src/main/resources/templates/suser/details.html
+++ b/logistics-consumer/src/main/resources/templates/suser/details.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/33.jpg">
 <a href="/suser/toOrderShow">返回</a>
 <table border="1">
     <tr>
