--- a/logistics-consumer/src/main/resources/templates/suser/frame/center.html
+++ b/logistics-consumer/src/main/resources/templates/suser/frame/center.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/46.jpg">
 <h1 align="center">超级管理系统</h1>
 </body>
 </html>
