--- a/logistics-consumer/src/main/resources/templates/suser/frame/top.html
+++ b/logistics-consumer/src/main/resources/templates/suser/frame/top.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/48.jpg">
 <h1 align="center">物流交易平台</h1>
 <h2>当前登录用户:<a th:text="${suser.susername}"></a>&nbsp;&nbsp;&nbsp;<a href="#" th:onclick="toLogin()">注销</a></h2>
 </body>
