--- a/logistics-consumer/src/main/resources/templates/suser/orderShow.html
+++ b/logistics-consumer/src/main/resources/templates/suser/orderShow.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/23.jpg">
 搜索结果<br>
 <table border="1">
     <tr>
