--- a/logistics-consumer/src/main/resources/templates/suser/suserLogin.html
+++ b/logistics-consumer/src/main/resources/templates/suser/suserLogin.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/55.jpg">
 </br></br></br></br></br></br></br></br>
 <center>
     <h2 style="color: blue">入驻物流登录</h2>
