--- a/logistics-consumer/src/main/resources/templates/suser/tobill.html
+++ b/logistics-consumer/src/main/resources/templates/suser/tobill.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/66.jpg">
 <form id="selbill">
     <input type="hidden" name="cpage" id="cpage">
 </form>
