--- a/logistics-consumer/src/main/resources/templates/boss/bossLogin.html
+++ b/logistics-consumer/src/main/resources/templates/boss/bossLogin.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/333.jpg">
 </br></br></br></br></br></br></br></br>
 <center>
     <h2 style="color: blue">承运商登录</h2>
@@ -33,15 +33,18 @@
 
 </body>
 <script>
+    //刷新验证码
     $("#imgCode").click(function(){
         $(this).attr("src","/boss/imgCode?t="+new Date().getTime());
     })
 
+    //跳转注册页面
     function reg() {
         location.href="/boss/toReg";
     }
 
 
+    //登录
     function bossLogin() {
         var bossname=$("#bossname").val();
         var bosspwd=$("#bosspwd").val();
@@ -55,7 +58,7 @@
                     $.ajax({
                         url:"/boss/bossLogin",
                         type:"post",
-                        data:$("#loginForm").serialize(),
+                        data:$("#loginForm").serialize(), //序列化表单 发送到后台
                         dataType:"json",
                         success:function (data) {
                             if(data=="2"){
