--- a/logistics-consumer/src/main/resources/templates/cuser/cuserRegiter.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/cuserRegiter.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body  background="../jpg/12.jpg">
 </br></br></br>
 <center>
     <h2 style="color: blue">用户注册</h2>
