--- a/logistics-consumer/src/main/resources/templates/cuser/frame/center.html
+++ b/logistics-consumer/src/main/resources/templates/cuser/frame/center.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body background="../jpg/33.jpg">
 show!!!!
 </body>
 </html>
