--- a/logistics-consumer/src/main/resources/templates/suser/reg.html
+++ b/logistics-consumer/src/main/resources/templates/suser/reg.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/22.jpg">
 </br></br></br></br></br></br></br></br>
 <center>
     <h2 style="color: blue">欢迎入驻</h2>
