--- a/logistics-consumer/src/main/resources/templates/suser/toOrderShow.html
+++ b/logistics-consumer/src/main/resources/templates/suser/toOrderShow.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <script src="../js/jquery.min.js"></script>
-<body>
+<body background="../jpg/49.jpg">
 筛选条件<br>
 <form id="tjselect">
 <select name="valuename">
